--- a/app/src/main/res/layout/dialog_search_results_list.xml
+++ b/app/src/main/res/layout/dialog_search_results_list.xml
@@ -1,25 +1,28 @@
 <!-- dialog_search_results_list.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
+    <!-- Title -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:text="Search Results"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
+
+    <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/searchResultsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/dialog_search_results"
-        android:padding="10dp"
+        android:padding="8dp"
         android:layout_margin="8dp"/>
 
 </LinearLayout>
