--- a/app/src/main/res/layout/fragment_option.xml
+++ b/app/src/main/res/layout/fragment_option.xml
@@ -21,44 +21,47 @@
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchNightMode"
-        android:text="Night Mode"
-        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:text="Night Mode"
+        android:layout_margin="10dp"
+        android:textSize="20sp"
+        android:textColor="@android:color/black" />
 
+    <!-- Notification Switch -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchNotify"
-        android:text="Notification"
-        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:text="Notification"
+        android:layout_margin="10dp"
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="10dp" />
 
+    <!-- Logout Button -->
     <LinearLayout
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="10"
-        android:layout_gravity="center"
-        android:gravity="center">
+        android:layout_margin="10dp"
+        android:gravity="center_vertical">
+
         <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Logout"
+            android:textSize="20sp"
+            android:textColor="@android:color/black" />
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Logout"
-            android:layout_weight="9"
-            android:textSize="20dp"
-            />
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
             android:src="@drawable/baseline_block_24"
-            />
+            android:layout_marginStart="10dp" />
 
     </LinearLayout>
-
-
 
 </LinearLayout>
