--- a/app/src/main/res/layout/activity_calling.xml
+++ b/app/src/main/res/layout/activity_calling.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".CallingActivity">
 
     <LinearLayout
@@ -52,8 +53,8 @@
             android:gravity="center">
             <ImageView
                 android:id="@+id/btnSpeaker"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginRight="80dp"
                 android:src="@drawable/speaker"
                 android:scaleType="fitXY">
@@ -61,8 +62,8 @@
 
             <ImageView
                 android:id="@+id/btnMute"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginLeft="80dp"
                 android:src="@drawable/unmute"
                 android:scaleType="fitXY">
@@ -99,8 +100,8 @@
 
         <ImageView
             android:id="@+id/btnEnd"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:scaleType="fitXY"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="20dp"
