--- a/app/src/main/res/layout/activity_group_edit.xml
+++ b/app/src/main/res/layout/activity_group_edit.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".GroupEditActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBar"
@@ -18,6 +19,7 @@
         android:id="@+id/groupIcon"
         android:layout_below="@+id/toolBar"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:src="@drawable/baseline_group_add_24">
     </com.mikhaellopez.circularimageview.CircularImageView>
 
@@ -27,9 +29,11 @@
         android:layout_height="50dp"
         android:hint="Group Name"
         android:layout_below="@+id/groupIcon"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
-        android:background="@color/white">
+        android:background="@drawable/search_edittext_background">
 
     </EditText>
 
@@ -38,22 +42,24 @@
         android:id="@+id/edt_Description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine|textCapSentences"
-        android:minHeight="100dp"
+        android:layout_below="@+id/edt_GroupName"
+        android:background="@drawable/search_edittext_background"
         android:gravity="top"
         android:hint="Description"
-        android:padding="10dp"
-        android:layout_below="@+id/edt_GroupName"
-        android:layout_marginTop="20dp"
-        android:background="@color/white">
-    </EditText>
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:inputType="textMultiLine|textCapSentences"
+        android:minHeight="100dp"
+        android:padding="10dp"></EditText>
 
     <Button
         android:id="@+id/btn_EditGroup"
         android:layout_width="200dp"
         android:backgroundTint="@color/lavender"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="20dp"
+        android:textSize="18sp"
         android:layout_below="@id/edt_Description"
         android:layout_centerHorizontal="true"
         android:text="Update"/>
