--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,8 +20,9 @@
             android:layout_marginTop="50dp"
             android:text="Login"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:gravity="center"
-            android:textSize="35dp"/>
+            android:textSize="40dp"/>
 
     </LinearLayout>
 
@@ -85,6 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_gravity="center"
+            android:textSize="18sp"
             android:text="Login"/>
 
         <ImageButton
