--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="Register"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:gravity="center"
             android:textSize="35dp"/>
@@ -27,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Create a new account"
+            android:textColor="@color/white"
             android:gravity="center"
             android:textSize="25dp"/>
 
@@ -98,6 +100,7 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:textSize="20sp"
             android:layout_gravity="center"
             android:text="Register"/>
 
@@ -108,6 +111,7 @@
             android:text="Already have account ? Login"
             android:textAlignment="center"
             android:textColor="#F44336"
+            android:textSize="16sp"
             android:layout_marginTop="10dp"/>
 
     </LinearLayout>
