--- a/app/src/main/res/layout/dialog_change_pass.xml
+++ b/app/src/main/res/layout/dialog_change_pass.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/white"
     android:padding="20dp">
 
     <TextView
@@ -59,6 +60,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="35dp"
     android:layout_gravity="center"
-    android:text="Update"/>
+    android:text="Update"
+    android:backgroundTint="@color/lavender"/>
 
 </LinearLayout>
