--- a/app/src/main/res/layout/dialog_search_results.xml
+++ b/app/src/main/res/layout/dialog_search_results.xml
@@ -1,21 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:contentPadding="3dp">
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
+    android:layout_margin="4dp"
+    app:contentPadding="8dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/senderTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="His Name"
             android:textStyle="bold"
-            android:layout_marginStart="5dp"
+            android:layout_marginLeft="10dp"
             android:textSize="20sp" />
-
 
         <TextView
             android:id="@+id/messageTv"
@@ -23,17 +26,20 @@
             android:layout_height="wrap_content"
             android:text="Message"
             android:textSize="18sp"
+            android:layout_marginLeft="10dp"
             android:maxLines="2"
-            android:layout_marginStart="5dp"
-            android:layout_below="@+id/senderTv"/>
+            android:layout_below="@id/senderTv"
+            android:layout_marginTop="8dp"/>
+
         <TextView
             android:id="@+id/timeTv"
-            android:layout_below="@+id/messageTv"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="12:30"
-            android:gravity="end"
-            android:textSize="14sp"/>
+            android:layout_below="@id/messageTv"
+            android:layout_alignParentEnd="true"
+            android:textSize="14sp"
+            android:textColor="@color/grey"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
