--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,19 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeFragment"
+    android:background="@color/white"
     android:orientation="vertical">
     <LinearLayout
+        android:id="@+id/search_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
         <EditText
             android:id="@+id/searchEdt"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:hint="Search"
-            android:padding="10dp"
-            android:background="@drawable/editextstyle"
-            android:layout_margin="10dp">
-        </EditText>
+            android:padding="12dp"
+            android:background="@drawable/search_edittext_background"
+            android:drawablePadding="8dp"
+            android:textColor="#000"
+            android:textColorHint="#888"
+            android:layout_marginEnd="8dp"
+            android:inputType="text"
+            android:imeOptions="actionSearch" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -24,7 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_marginTop="70dp">
+        android:layout_below="@+id/search_bar"
+        android:padding="10dp">
     </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -36,6 +45,6 @@
         android:layout_margin="15dp"
         android:src="@drawable/baseline_add_24"
         android:layout_alignParentRight="true"
-        android:background="#08E648"/>
+        android:background="@color/lavender"/>
 
 </RelativeLayout>
