--- a/app/src/main/res/layout/row_chatlist.xml
+++ b/app/src/main/res/layout/row_chatlist.xml
@@ -1,46 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:contentPadding="3dp">
+    android:layout_margin="4dp"
+    app:contentPadding="12dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="4dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/profileIv"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/baseline_account_circle_24"/>
+            android:src="@drawable/baseline_account_circle_24"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"/>
 
         <ImageView
             android:id="@+id/onlineStatus"
             android:layout_width="20dp"
-            android:layout_height="20dp"/>
+            android:layout_height="20dp"
+            android:layout_alignBottom="@id/profileIv"
+            android:layout_alignEnd="@id/profileIv"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/online_status_background"/>
 
         <TextView
             android:id="@+id/nameTv"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="His Name"
             android:textStyle="bold"
-            android:layout_marginStart="5dp"
-            android:textSize="20sp"
-            android:layout_toEndOf="@+id/profileIv"
-            android:layout_toRightOf="@+id/profileIv"/>
-
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_marginStart="12dp"
+            android:layout_toEndOf="@id/profileIv"
+            android:layout_alignParentTop="true"/>
 
         <TextView
             android:id="@+id/lastmsgTv"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Last Message"
-            android:textSize="18sp"
+            android:textSize="14sp"
+            android:textColor="@color/grey"
             android:maxLines="2"
-            android:layout_marginStart="5dp"
-            android:layout_toEndOf="@+id/profileIv"
-            android:layout_toRightOf="@+id/profileIv"
-            android:layout_below="@+id/nameTv"/>
+            android:ellipsize="end"
+            android:layout_marginStart="12dp"
+            android:layout_toEndOf="@id/profileIv"
+            android:layout_below="@id/nameTv"
+            android:layout_marginTop="4dp"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
