--- a/app/src/main/res/layout/row_groupchat.xml
+++ b/app/src/main/res/layout/row_groupchat.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
-    app:contentPadding="10dp"
-    android:layout_marginTop="10dp">
+    app:contentPadding="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
