--- a/app/src/main/res/layout/row_groupchat_right.xml
+++ b/app/src/main/res/layout/row_groupchat_right.xml
@@ -1,48 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_sender"
-    android:layout_marginStart="100dp"
-    android:layout_marginTop="10dp"
-    android:padding="10dp">
-    <RelativeLayout
-        android:id="@+id/messageLayout"
+    android:orientation="horizontal">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/nameTv"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <!-- Your existing RelativeLayout content here -->
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:textColor="@color/lavender"
-            android:text="Name"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/messageTv"
-            android:layout_below="@id/nameTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            android:textColor="@color/black"
-            android:text="The message" />
-        <ImageView
-            android:id="@+id/messageIv"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_below="@+id/messageTv"
-            android:src="@drawable/baseline_image_24"
-            android:scaleType="centerCrop"
-            android:background="@drawable/bg_sender"/>
-        <TextView
-            android:id="@+id/timeTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="Time"
-            android:layout_below="@id/messageIv"
-            android:layout_marginEnd="5dp"
-            android:textSize="12sp"/>
-    </RelativeLayout>
-</RelativeLayout>
+            android:padding="20dp"
+            android:background="@drawable/bg_sender">
+
+            <!-- Your inner RelativeLayout content here -->
+            <RelativeLayout
+                android:id="@+id/messageLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <!-- Your inner RelativeLayout content here -->
+                <TextView
+                    android:id="@+id/nameTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:textColor="@color/lavender"
+                    android:text="Name"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/messageTv"
+                    android:layout_below="@id/nameTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:textColor="@color/black"
+                    android:text="The message" />
+
+                <ImageView
+                    android:id="@+id/messageIv"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_margin="20dp"
+                    android:layout_below="@+id/messageTv"
+                    android:src="@drawable/baseline_image_24"
+                    android:scaleType="centerCrop"
+                    android:background="@drawable/bg_sender"/>
+
+                <TextView
+                    android:id="@+id/timeTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Time"
+                    android:layout_margin="3dp"
+                    android:layout_below="@id/messageIv"
+                    android:textSize="12sp"/>
+            </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
+
+</LinearLayout>
