--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -1,66 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
     app:cardUseCompatPadding="true"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="2dp"
-    app:contentPadding="3dp">
-
-<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/avatarIv"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/baseline_account_circle_24">
-    </com.mikhaellopez.circularimageview.CircularImageView>
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
+    app:contentPadding="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/nameTv"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/avatarIv"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/baseline_account_circle_24"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="Name"
-            android:textStyle="bold"
-            android:textColor="@color/black">
+            android:orientation="vertical"
+            android:layout_marginStart="8dp">
 
-        </TextView>
+            <TextView
+                android:id="@+id/nameTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="Name"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
-        <TextView
-            android:id="@+id/notificationTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Noti"
-            android:textColor="@color/black">
+            <TextView
+                android:id="@+id/notificationTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Noti"
+                android:textColor="@color/black"/>
 
-        </TextView>
-
-        <TextView
-            android:id="@+id/timeTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Time"
-            android:textColor="@color/black">
-
-        </TextView>
-
-    </LinearLayout>
+            <TextView
+                android:id="@+id/timeTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Time"
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
-
-
-
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
