--- a/app/src/main/res/layout/row_participant_add.xml
+++ b/app/src/main/res/layout/row_participant_add.xml
@@ -1,48 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/imvAvatar"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/baseline_account_circle_24"/>
+        android:layout_margin="4dp"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="8dp"
+        android:backgroundTint="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginStart="10dp"
-            android:orientation="vertical"
-            android:layout_gravity="center">
-               <TextView
-                   android:id="@+id/nameTv"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Name"
-                   android:textSize="18sp"
-                   android:textStyle="bold"/>
+            android:orientation="horizontal"
+            android:padding="10dp">
 
-            <TextView
-                android:id="@+id/emailTv"
-                android:layout_width="wrap_content"
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/imvAvatar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/baseline_account_circle_24"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="16dp"
+                app:civ_border_color="@color/black"
+                app:civ_border_width="2dp" />
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Email"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
-            <TextView
-                android:id="@+id/statusTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Status"/>
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/nameTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorOnSurface" />
+
+                <TextView
+                    android:id="@+id/emailTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:textSize="12sp"
+                    android:textColor="?attr/colorOnSurface"
+                    android:layout_marginTop="4dp" />
+
+                <TextView
+                    android:id="@+id/statusTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Status"
+                    android:textSize="12sp"
+                    android:textColor="?attr/colorOnSurface"
+                    android:layout_marginTop="4dp" />
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
