--- a/app/src/main/res/layout/row_post.xml
+++ b/app/src/main/res/layout/row_post.xml
@@ -1,56 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="3dp"
+    android:layout_margin="4dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
     app:cardUseCompatPadding="true"
     app:cardBackgroundColor="@color/white">
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <LinearLayout
             android:id="@+id/profileLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:paddingBottom="8dp">
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/postUImg"
                 android:src="@drawable/baseline_account_circle_24"
                 android:layout_width="50dp"
-                android:layout_height="50dp">
-            </com.mikhaellopez.circularimageview.CircularImageView>
+                android:layout_height="50dp"
+                app:civ_border_color="@color/black"
+                app:civ_border_width="2dp"/>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical"
-                android:layout_weight="1">
+                android:paddingStart="10dp">
 
                 <TextView
                     android:id="@+id/postUName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:text="Name">
-                </TextView>
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:text="Name"/>
 
                 <TextView
                     android:id="@+id/postTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="33 min">
-                </TextView>
-
+                    android:textColor="@color/grey"
+                    android:text="33 min"/>
             </LinearLayout>
 
             <ImageButton
@@ -58,61 +61,60 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/baseline_expand_more_24"
-                android:background="@color/white">
-
-            </ImageButton>
-
+                android:background="?attr/selectableItemBackgroundBorderless"/>
         </LinearLayout>
 
         <TextView
             android:id="@+id/postTitleTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:autoLink="all"
-            android:text="Title">
-
-        </TextView>
+            android:text="Title"
+            android:paddingBottom="4dp"/>
 
         <TextView
             android:id="@+id/postDescriptionTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:textStyle="bold"
             android:autoLink="all"
-            android:text="Description">
-        </TextView>
+            android:text="Description"
+            android:paddingBottom="8dp"/>
 
         <ImageView
             android:id="@+id/postImageIv"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@color/white">
-        </ImageView>
+            android:layout_height="300dp"
+            android:background="@color/white"
+            android:paddingBottom="8dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/postLikeTv"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="10 Like"
-                android:textColor="@color/lavender"></TextView>
+                android:textColor="@color/lavender"
+                android:textSize="14sp"/>
+
             <TextView
                 android:id="@+id/pCommentsTv"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="10 Comments"
                 android:layout_weight="1"
+                android:text="10 Comments"
                 android:textAlignment="textEnd"
                 android:gravity="end"
-                android:textColor="@color/lavender"></TextView>
+                android:textColor="@color/lavender"
+                android:textSize="14sp"/>
         </LinearLayout>
 
         <View
@@ -124,48 +126,48 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:paddingTop="8dp">
 
             <Button
                 android:id="@+id/btnLike"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:drawableLeft="@drawable/notlike"
-                android:drawablePadding="5dp"
+                android:drawablePadding="8dp"
+                android:layout_margin="3dp"
                 android:backgroundTint="@color/lavender"
-                android:text="Like">
-            </Button>
+                android:text="Like" />
 
             <Button
                 android:id="@+id/btnComment"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:drawableLeft="@drawable/comment"
                 android:drawablePadding="5dp"
+                android:layout_margin="3dp"
                 android:backgroundTint="@color/lavender"
-                android:text="Comment">
-            </Button>
+                android:text="Comment"
+                android:padding="8dp"/>
 
             <Button
                 android:id="@+id/btnShare"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:drawableLeft="@drawable/share"
-                android:drawablePadding="5dp"
+                android:drawablePadding="8dp"
+                android:layout_margin="3dp"
                 android:backgroundTint="@color/lavender"
-                android:text="Share">
-            </Button>
-
+                android:text="Share"
+                android:padding="8dp"/>
         </LinearLayout>
 
     </LinearLayout>
 
-
-
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
