--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -1,49 +1,70 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="UTF-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="4dp">
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/imvAvatar"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/baseline_account_circle_24"/>
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        app:strokeWidth="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_gravity="center">
-               <TextView
-                   android:id="@+id/tvName"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Name"
-                   android:textSize="18sp"
-                   android:textStyle="bold"/>
+            android:orientation="horizontal"
+            android:background="@color/white"
+            android:padding="16dp">
 
-            <TextView
-                android:id="@+id/tvEmail"
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/imvAvatar"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/baseline_account_circle_24"
+                android:layout_marginEnd="16dp"
+                app:civ_border_color="@color/black"
+                app:civ_border_width="2dp" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/tvName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorOnSurface" />
+
+                <TextView
+                    android:id="@+id/tvEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:textSize="16sp"
+                    android:textColor="?attr/colorOnSurface" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/blockIv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:layout_marginStart="8dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_unblocked"
+                app:tint="@color/lavender" />
         </LinearLayout>
-        <ImageView
-            android:id="@+id/blockIv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_unblocked"/>
 
-    </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
