--- a/app/src/main/res/layout/row_post.xml
+++ b/app/src/main/res/layout/row_post.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true"
@@ -127,6 +126,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:weightSum="3"
             android:paddingTop="8dp">
 
             <Button
@@ -134,32 +134,32 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:drawableLeft="@drawable/notlike"
                 android:drawablePadding="8dp"
                 android:layout_margin="3dp"
                 android:backgroundTint="@color/lavender"
-                android:text="Like" />
+                android:text="Like"
+                android:padding="8dp" />
 
             <Button
                 android:id="@+id/btnComment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:drawableLeft="@drawable/comment"
-                android:drawablePadding="5dp"
                 android:layout_margin="3dp"
                 android:backgroundTint="@color/lavender"
                 android:text="Comment"
-                android:padding="8dp"/>
+                android:padding="4dp"/>
 
             <Button
                 android:id="@+id/btnShare"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:drawableLeft="@drawable/share"
                 android:drawablePadding="8dp"
                 android:layout_margin="3dp"
