--- a/app/src/main/res/layout/row_post.xml
+++ b/app/src/main/res/layout/row_post.xml
@@ -87,7 +87,15 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:background="@color/white"
-            android:paddingBottom="8dp"/>
+            android:paddingBottom="8dp" />
+
+        <androidx.media3.ui.PlayerView
+            android:id="@+id/postVideo"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@color/white"
+            android:paddingBottom="8dp"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:layout_width="match_parent"
